# djangox-template

./: pyproject.toml
bands/: admin.py  models.py  urls.py  views.py
bands/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: _base.html
templates/bands/: band_create.html  band_delete.html  band_detail.html  band_list.html  band_update.html
