[tool.poetry]
name = "djangox-template"
version = "0.1.0"
description = ""
authors = ["Zach Hornung <Zachhornung@comcast.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
django-allauth = "^0.44.0"
django-crispy-forms = "^1.12.0"
django-debug-toolbar = "^3.2.1"
whitenoise = "^5.2.0"
black = "^21.6b0"
flake8 = "^3.9.2"
webgl = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
